# popovic

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.example.yml
examples/basic-site/: index.html  main.js  styles.css
src/: agent.rs  bootstrap.rs  deploy.rs  main.rs  mcp.rs  metrics.rs  models.rs  secret.rs  static_http.rs  store.rs  ui.rs  web.rs
