[package]
name = "popovic"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
